tests/error/py_errors/invalid_type_arg.py
from guppylang import py
from guppylang.std.builtins import array
from tests.util import compile_guppy


@compile_guppy
def foo(xs: array[int, py(1.0)]) -> None:
    pass
